feat(Liveblocks): Introducing the liveblock library Integration the livebrock library into to app to create realtime colloboration on the notion doc.
2:15:30 out of 37 hours are completed.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.20.0",
+    "@blocknote/mantine": "^0.20.0",
+    "@blocknote/react": "^0.20.0",
     "@clerk/nextjs": "^6.8.0",
+    "@liveblocks/client": "^2.13.1",
+    "@liveblocks/react": "^2.13.1",
+    "@liveblocks/yjs": "^2.13.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "admin": "^1.4.1",
@@ -24,7 +30,8 @@
     "react-firebase-hooks": "^5.1.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.1"
+    "vaul": "^1.1.1",
+    "yjs": "^13.6.20"
   },
   "devDependencies": {
     "@types/node": "^20",
